feat (usuario): endpoint para obter um pelo uuid
